[gd_scene load_steps=2 format=3 uid="uid://cgfw0stm8m1eg"]

[ext_resource type="Script" path="res://Scripts/InvaderSpawner.gd" id="1_f7s0x"]

[node name="InvaderSpawner" type="Node2D"]
script = ExtResource("1_f7s0x")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
